--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   file_picker_cross: ^4.3.2
+  async: ^2.5.0
+  provider: ^5.0.0
+  flutter_easyloading: ^3.0.0
+  flutter_map: ^0.12.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
