--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^5.0.0
   flutter_easyloading: ^3.0.0
   flutter_map: ^0.12.0
+  pluto_grid: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
