--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_easyloading: ^3.0.0
   flutter_map: ^0.12.0
   pluto_grid: ^1.2.0
+  tuple: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
