--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ dependencies:
   file_picker_cross: ^4.3.2
   async: ^2.5.0
   provider: ^5.0.0
-  flutter_easyloading: ^3.0.0
   flutter_map: ^0.12.0
   pluto_grid: ^1.2.0
   tuple: ^1.0.2
+  loading_overlay: ^0.2.1
+  cool_alert: ^1.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
