--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,9 @@ dependencies:
   provider: ^5.0.0
   flutter_map: ^0.12.0
   pluto_grid: ^1.2.0
-  tuple: ^1.0.2
-  loading_overlay: ^0.2.1
-  cool_alert: ^1.0.3
+  worker_manager: ^3.3.1
+  flutter_easyloading: ^3.0.0
+  overlay_support: ^1.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
