--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   worker_manager: ^3.3.1
   flutter_easyloading: ^3.0.0
   overlay_support: ^1.2.1
+  math_utils: ^1.0.3
+  extended_math: ^0.0.29+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
