--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   math_utils: ^1.0.3
   extended_math: ^0.0.29+1
   floating_action_row: ^0.1.0
+  weight_slider: ^1.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
